--- a/src/main/resources/assets/tutorialmod/lang/en_US.lang
+++ b/src/main/resources/assets/tutorialmod/lang/en_US.lang
@@ -1,3 +1,4 @@
 tile.tutorialblock.name=Tutorial Block
 item.tutorialitem.name=Tutorial Item
 item.tutorialitem.desc=Information
+itemGroup.tabtutorial
